--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #ffffff, #9c7fd1);
+    background: linear-gradient(135deg, #667eea, #764ba2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,8 +17,6 @@ body {
     padding: 20px;
     box-sizing: border-box;
 }
-
-
 
 /* Container principal */
 .container {
@@ -122,7 +120,7 @@ h1 {
   box-shadow: 0 0 8px rgba(255,255,255,0.3);
 }
 
-
+/* Bouton */
 .submit-btn {
   width: 100%;
   padding: 15px;
