--- a/templates/offre/deposer.html.twig
+++ b/templates/offre/deposer.html.twig
@@ -3,7 +3,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Déposer une Offre</title>
+    <title>Déposer une Offree</title>
     <link rel="stylesheet" href="{{ asset('assets/css/deposer.css') }}">
 </head>
 <body>
