Affichage des offres existantes sous forme de liste && affichage de chaque offre toute seule avec tous ses critères

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -125,10 +125,11 @@
                             <div class="single-service-icon">
                                 <i class="flaticon-car"></i>
                             </div>
-                            <h2><a href="#">largest dealership <span>of</span> car</a></h2>
+                            <h2><a href="{{ path('app_offres') }}">Voir toutes les offres de voitures</a></h2>
                             <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut den fugit sed quia.
+                            Découvrez les meilleures offres de location disponibles près de chez vous !
                             </p>
+
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
