fix bugs modification offre

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -125,9 +125,9 @@
                             <div class="single-service-icon">
                                 <i class="flaticon-car"></i>
                             </div>
-                            <h2><a href="{{ path('app_offres') }}">Voir toutes les offres de voitures</a></h2>
+                            <h2><a href="{{ path('app_offres') }}">Mes offres </a></h2>
                             <p>
-                            Découvrez les meilleures offres de location disponibles près de chez vous !
+                            Voir ici toutes mes offres déposées.
                             </p>
 
                         </div>
