Vérification du permis de conduire & Mise en place de l’authentification

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -137,9 +137,9 @@
                             <div class="single-service-icon">
                                 <i class="flaticon-car-repair"></i>
                             </div>
-                            <h2><a href="#">unlimited repair warrenty</a></h2>
+                            <h2><a href="{{ path('ajouter_permis') }}" target="_blank">Ajouter mon permis</a></h2>
                             <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut den fugit sed quia.
+                                Téléversez une photo ou un scan de votre permis de conduire pour valider votre réservation en toute simplicité.
                             </p>
                         </div>
                     </div>
