fix bugs modification offre

--- a/templates/offre/show.html.twig
+++ b/templates/offre/show.html.twig
@@ -5,6 +5,7 @@
     <title>Détails de l'Offre</title>
     <link rel="stylesheet" href="{{ asset('assets/css/deposer.css') }}">
     <style>
+        /* Votre CSS pour les boutons et l'interface */
         .btn {
             display: inline-block;
             padding: 10px 20px;
@@ -71,7 +72,7 @@
             width: 100%; /* Largeur du bouton "Supprimer" */
             background-color: red;
         }
-        
+
         .toggle-dispo-btn {
             display: block;
             margin-top: 15px;
@@ -79,13 +80,13 @@
         }
 
         .btn-delete:hover {
-        background-color: rgb(80, 1, 1); /* Un rouge plus foncé au survol */
-    }
+            background-color: rgb(80, 1, 1); /* Un rouge plus foncé au survol */
+        }
 
-    /* Effet de survol pour "Suspendre l'offre" */
-    #toggle-dispo-btn:hover {
-        background-color: rgb(80, 1, 1); /* Un rouge plus foncé au survol */
-    }
+        /* Effet de survol pour "Suspendre l'offre" */
+        #toggle-dispo-btn:hover {
+            background-color: rgb(80, 1, 1); /* Un rouge plus foncé au survol */
+        }
     </style>
 </head>
 <body>
